--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -118,7 +118,7 @@
 
   				<div class="messages-container margin-top-0">
   					<div class="messages-headline">
-              <h4>{{comment.title}}</h4>
+              <h4 style="line-height:26px">{{comment.title}}</h4>
   					</div>
 
   					<div class="messages-container-inner">
