--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -102,9 +102,8 @@
   		<div class="dashboard-nav-inner">
 
   			<ul data-submenu-title="Main">
-  				<li class="active"><a href="#"><i class="sl sl-icon-settings"></i> Dashboard</a></li>
+  				<li class="active"><a href="#"><i class="sl sl-icon-settings"></i> Comments</a></li>
   				<li><a href="#"><i class="sl sl-icon-envelope-open"></i> Messages</a></li>
-  				<li><a href="#"><i class="fa fa-calendar-check-o"></i> Bookings</a></li>
   			</ul>
 
   		</div>
