show comment date

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -134,7 +134,7 @@
                     <div style="text-align:right">
                       <small>submitted by
                         <a class="text-blue" href="#">{{comment.profile.username}}</a>
-                        <span style="margin:8px">·</span>3 hours ago
+                        <span style="margin:8px">·</span>{{dateString}}
                       </small>
                     </div>
                   </div>
