--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -102,8 +102,8 @@
   		<div class="dashboard-nav-inner">
 
   			<ul data-submenu-title="Main">
-  				<li class="active"><a href="#"><i class="sl sl-icon-settings"></i> Comments</a></li>
-  				<li><a href="#"><i class="sl sl-icon-envelope-open"></i> Messages</a></li>
+  				<li class="active"><a href="#"><i class="sl sl-icon-bubbles"></i> Comments</a></li>
+  				<li><a href="/community"><i class="sl sl-icon-arrow-left"></i> Back</a></li>
   			</ul>
 
   		</div>
