--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <head>
-  {{>head}}
+  <title>{{comment.title}}</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="stylesheet" href="{{{cdn}}}/dist/css/style.min.css">
+  <link rel="icon" href="https://lh3.googleusercontent.com/iGeI_uAeybirO0eIxs1x0xybUSFPRVa8lEluDtl5_0q_z-Xwy4GWLLn3sX9MhNJg3MZFGr3fsmqcMNvnE5XZL737ppM=s32-c" type="image/png" />
 
   <meta property="og:title" content="Vertex 360 | {{comment.title}}" />
 	<meta property="og:type" content="article" />
