add pricing boxes to home page

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -324,6 +324,54 @@
         and learn more about Vetex 360!. To join, click <a style="color:red" target="_blank" href="https://join.slack.com/t/vertex360/shared_invite/enQtNTg4ODY2MzY3MTIyLTdlNzNjY2RmOGIyYjIxYzZkNmQ5ZDVhNWNhNWU0ZjJiY2U1Mjg2OWU4NjMzY2YwOGVlZjU2YjQ1MjMzNWI3NGM">HERE</a>.
       </p>
 
+      <div class="row">
+
+      		<div class="col-md-12">
+      			<div class="pricing-container margin-top-30">
+
+      			<!-- Plan #1 -->
+      				<div class="plan">
+      					<div class="plan-price">
+      						<h3 class="margin-bottom-0">Basic</h3>
+      						<span class="value padding-top-10">Free</span>
+      						<span class="period margin-top-10">Forever</span>
+      					</div>
+
+      					<div class="plan-features">
+      						<ul>
+      							<li>One Listing</li>
+      							<li>90 Days Availability</li>
+      							<li>Non-Featured</li>
+      							<li>Limited Support</li>
+      						</ul>
+      						<a class="button border" href="#">Get Started</a>
+      					</div>
+      				</div>
+
+      				<!-- Plan #3 -->
+      				<div class="plan">
+
+      					<div class="plan-price" style="background:red">
+      						<h3 style="color:#fff" class="margin-bottom-0">Pro</h3>
+      						<span style="color:#fff" class="value padding-top-10">$5</span>
+      						<span style="color:#fff" class="period margin-top-10">Per Month</span>
+      					</div>
+
+      					<div class="plan-features">
+      						<ul>
+      							<li>Unlimited Listings</li>
+      							<li>Lifetime Availability</li>
+      							<li>Featured In Search Results</li>
+      							<li>24/7 Support</li>
+      						</ul>
+      						<a class="button border" href="#">Get Started</a>
+      					</div>
+      				</div>
+
+      			</div>
+      		</div>
+      	</div>
+
       <%#showGetStarted%>
       <a id="btn-get-started" href="#sign-in-dialog" style="border-radius:4px;width:100%;text-align:center;letter-spacing:3px;padding:16px" class="button with-icon popup-with-zoom-anim">JOIN VERTEX 360</i></a>
       <%/showGetStarted%>
