--- a/views/index.mustache
+++ b/views/index.mustache
@@ -339,12 +339,12 @@
 
       					<div class="plan-features">
       						<ul>
-      							<li>One Listing</li>
-      							<li>90 Days Availability</li>
-      							<li>Non-Featured</li>
-      							<li>Limited Support</li>
+      							<li>One Site</li>
+                    <li>Automatic SSL</li>
+      							<li>Custom Domain</li>
+      							<li>Up to 1mm requests per mo</li>
       						</ul>
-      						<a class="button border" href="#">Get Started</a>
+      						<a class="button border popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
       					</div>
       				</div>
 
@@ -359,9 +359,9 @@
 
       					<div class="plan-features">
       						<ul>
-      							<li>Unlimited Listings</li>
-      							<li>Lifetime Availability</li>
-      							<li>Featured In Search Results</li>
+      							<li>5 Sites</li>
+      							<li>Automatic SSL</li>
+                    <li>Custom Domain</li>
       							<li>24/7 Support</li>
       						</ul>
       						<a class="button border" href="#">Get Started</a>
