render analytics only on production

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -411,7 +411,9 @@
 <script type="text/javascript">window.__PRELOADED__ = {{{preloaded}}}</script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/vendor.min.js"></script>
 <script type="text/javascript" src="{{{cdn}}}/dist/js/home.min.js"></script>
+{{#cdn}}
 {{>analytics}}
+{{/cdn}}
 
 </body>
 </html>
