updated pricing plans

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -342,7 +342,7 @@
       							<li>One Site</li>
                     <li>Automatic SSL</li>
       							<li>Custom Domain</li>
-      							<li>Up to 1mm requests per mo</li>
+      							<li>$5 per Additional Site</li>
       						</ul>
       						<a class="button border popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
       					</div>
@@ -350,10 +350,9 @@
 
       				<!-- Plan #3 -->
       				<div class="plan">
-
       					<div class="plan-price" style="background:red">
       						<h3 style="color:#fff" class="margin-bottom-0">Pro</h3>
-      						<span style="color:#fff" class="value padding-top-10">$5</span>
+      						<span style="color:#fff" class="value padding-top-10">$10</span>
       						<span style="color:#fff" class="period margin-top-10">Per Month</span>
       					</div>
 
@@ -362,7 +361,7 @@
       							<li>5 Sites</li>
       							<li>Automatic SSL</li>
                     <li>Custom Domain</li>
-      							<li>24/7 Support</li>
+                    <li>$5 per Additional Site</li>
       						</ul>
       						<a class="button border" href="#">Get Started</a>
       					</div>
