--- a/views/index.mustache
+++ b/views/index.mustache
@@ -344,7 +344,7 @@
       							<li>Custom Domain</li>
       							<li>$5 per Additional Site</li>
       						</ul>
-      						<a class="button border popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
+      						<a id="btn-join-basic" class="button border popup-with-zoom-anim" href="#sign-in-dialog">Get Started</a>
       					</div>
       				</div>
 
