--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -20,7 +20,7 @@
 			</div>
 
 
-			<div id="nav-menu" class="right-side">
+			<div id="nav-menu" class="right-side hidden-xs">
 				<div class="header-widget">
           <nav id="navigation" class="style-1">
   					<ul id="responsive">
