--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -102,7 +102,7 @@
   <div class="clearfix"></div>
 
   <div id="dashboard">
-  	<div class="dashboard-nav">
+  	<div class="dashboard-nav hidden-xs">
   		<div class="dashboard-nav-inner">
 
   			<ul data-submenu-title="Main">
