mobile nav styling

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -1,6 +1,6 @@
 <header id="header-container" class="fixed fullwidth">
 	<div id="header" class="not-sticky">
-		<div class="container">
+		<div class="container mobile-nav">
 
 			<div class="left-side">
 				<div id="logo">
