--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -89,7 +89,11 @@
 
 @media (max-width: 375px) {
   #header {
-    padding-bottom: 0px;
+    padding-bottom: 20px;
+  }
+
+  .mobile-nav {
+    padding-left: 20px;
   }
 }
 
