--- a/views/community.mustache
+++ b/views/community.mustache
@@ -117,13 +117,6 @@
       padding: 8px !important;
       border-radius: 4px !important;
     }
-
-    @media (max-width: 375px) {
-      .comments-container {
-        padding: 8px;
-      }
-    }
-
   </style>
 </head>
 
@@ -146,7 +139,7 @@
   		</div>
   	</div>
 
-  	<div class="dashboard-content comments-container">
+  	<div class="dashboard-content mobile-container">
   		<div class="row">
 
   			<!-- Listings -->
