--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -113,7 +113,7 @@
   		</div>
   	</div>
 
-  	<div class="dashboard-content">
+  	<div class="dashboard-content mobile-container">
   		<div class="row">
 
   			<!-- Listings -->
