mobile comments styling

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -145,7 +145,7 @@
   							</div>
 
                 <hr />
-                <div class="message-bubble margin-bottom-60">
+                <div class="message-bubble margin-bottom-60 hidden-xs">
   								<div class="message-avatar">
                     <img id="reply-avatar" style="width:44px;height:44px" src="" alt="" />
                   </div>
@@ -160,7 +160,7 @@
                 <div id="container-replies">
                   {{#replies}}
                   <div class="reply-box">
-                    <a href="/profile/{{profile.slug}}">
+                    <a class="hidden-xs" href="/profile/{{profile.slug}}">
                       <img src="{{{profile.image}}}=s96-c" alt="" />
                     </a>
                     <small>
