--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -26,9 +26,9 @@
   					<ul id="responsive">
   						<li><a id="nav-home" class="current" href="/">Home</a></li>
   						<li><a id="nav-how-it-works" href="/?selected=how+it+works">About</a></li>
-							<li><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
+							<li class="hidden-xs"><a id="nav-faq" href="/?selected=faq">FAQ</a></li>
 							<li><a id="nav-faq" href="/community">Community</a></li>
-							<li><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
+							<li class="hidden-xs"><a id="nav-login" href="#sign-in-dialog" class="popup-with-zoom-anim">Login</a></li>
   					</ul>
   				</nav>
           <div id="login-container" class="hidden-xs hidden-sm">
