hide right sidebar on mobile

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -180,7 +180,7 @@
   				</div>
   			</div>
 
-        <div class="col-lg-4 col-md-4">
+        <div class="col-lg-4 col-md-4 hidden-xs">
           {{#profile}}
           <div id="profile-card" class="dashboard-list-box margin-top-0" style="position:fixed;width:310px;">
             <h4 class="gray">Profile</h4>
