show reply box only if user logged in

--- a/views/comments.mustache
+++ b/views/comments.mustache
@@ -145,6 +145,7 @@
   							</div>
 
                 <hr />
+                {{#profile}}
                 <div class="message-bubble margin-bottom-60 hidden-xs">
   								<div class="message-avatar">
                     <img id="reply-avatar" style="width:44px;height:44px" src="" alt="" />
@@ -156,6 +157,7 @@
                     </div>
                   </div>
   							</div>
+                {{/profile}}
 
                 <div id="container-replies">
                   {{#replies}}
