show text entry only if user logged in

--- a/views/community.mustache
+++ b/views/community.mustache
@@ -154,6 +154,8 @@
 
   						<!-- Message Content -->
   						<div id="container-forum" class="message-content">
+
+                {{#profile}}
                 <div class="message-bubble margin-bottom-60 hidden-xs">
   								<div class="message-avatar">
                     <img id="comment-avatar" src="" alt="" />
@@ -166,6 +168,7 @@
                     </div>
                   </div>
   							</div>
+                {{/profile}}
 
                 {{#comments}}
                 <div class="post-preview">
